fixing layout issues

--- a/public/src/app/main-content/languages/languages.component.css
+++ b/public/src/app/main-content/languages/languages.component.css
@@ -29,6 +29,7 @@ h1, h2 {
   position: relative;
   overflow: hidden;
   color: #272f38;
+  min-height: 600px;
 }
 
 
@@ -45,6 +46,7 @@ h1, h2 {
 .box {
   width: 23%;
   height: 50%;
+  min-height: 60px;
   margin: 1%;
   border: 1px solid #0b76db;
   text-align: center;
@@ -129,7 +131,7 @@ h1, h2 {
 
 @media only screen and (max-width: 370px){
   .container {
-    height: 140vh;
+    height: auto;
     flex-direction: column;
   }
 
@@ -176,6 +178,8 @@ h1, h2 {
 
   .triangle-down {
     bottom: -1rem;
+    left: 40%;
+    right: 40%;
   }
 
   .content {
@@ -189,7 +193,7 @@ h1, h2 {
 }
 @media only screen and (min-width: 371px){
   .container {
-    height: 140vh;
+    height: auto;
     flex-direction: column;
   }
 
@@ -236,6 +240,8 @@ h1, h2 {
 
   .triangle-down {
     bottom: -1rem;
+    left: 40%;
+    right: 40%;
   }
 
   .content {
@@ -249,7 +255,7 @@ h1, h2 {
 }
 @media only screen and (min-width: 600px){
   .container {
-    height: 140vh;
+    height: auto;
     flex-direction: column;
   }
 
@@ -314,7 +320,8 @@ h1, h2 {
 }
 @media only screen and (min-width: 750px){
   .container {
-    height: 75vh;
+    height: auto;
+    max-height: 75vh;
     flex-direction: row;
   }
 
@@ -369,7 +376,8 @@ h1, h2 {
 
 @media only screen and (min-width: 900px){
   .container {
-    height: 75vh;
+    height: auto;
+    max-height: 85vh;
     flex-direction: row;
   }
 
